# academic-mcp-server

./: LICENSE  README.md  pyproject.toml  run_server.py  test_server.py
src/academic_mcp/: __init__.py  server.py
